--- a/announcement.html
+++ b/announcement.html
@@ -46,6 +46,23 @@
       font-size: 14px;
       margin-top: 20px;
     }
+
+    .btn {
+      display: inline-block;
+      background-color: #28a745;
+      color: #fff;
+      font-size: 20px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      margin-top: 20px;
+    }
+
+    .btn::before {
+      content: "\260E\fe0f";
+      display: inline-block;
+      margin-right: 5px;
+    }
   </style>
 </head>
 <body>
@@ -53,7 +70,8 @@
     <h1>Website Announcement</h1>
     <p><span class="red-word">This website has been changed. Please visit the new website:</span></p>
     <a href="https://pandora-final-1.vercel.app/">https://pandora-final-1.vercel.app/</a>
-    <p class="note">Note: This announcement is by Software Digital Admin, please PM shopee chat if have any inquiry!</p>
+    <p class="note">Note: This announcement is by Software Digital Admin.</p>
+    <a class="btn" href="https://chat.whatsapp.com/BU2LjXTAhj7FmuFMPsOOwj">Join WhatsApp Group for more latest info</a>
   </div>
 </body>
 </html>
